feat(菜品管理):查询菜品详情
